# HA4DETR

./: .gitignore  Dockerfile.builder  MANIFEST.in  README.md  build_on_win.bat  build_with_docker.sh  nox_builder.bat  noxfile.py  pyproject.toml  setup.py  windows_build.ps1
.github/actions/aws-code-artifact/: action.yml
.github/workflow/: release.yml
demo/: test.py
src/ha4detr/: __init__.py  hungarian_gpu_batch.py  hungarian_launcher.h
src/ha4detr/cpu/: hungarian_bindings.cpp
src/ha4detr/cuda/: hungarian_bindings.cu
